--- a/package.json
+++ b/package.json
@@ -18,5 +18,9 @@
     "json2csv": "^5.0.0",
     "line-by-line": "^0.1.6",
     "ua-parser-js": "^0.7.21"
+  },
+  "engines": {
+    "node": ">=12.0.0",
+    "npm": ">=6.0.0"
   }
 }
